libcamera-sys/c_api/controls.h

typedef libcamera::ControlList libcamera_control_list_t;
typedef libcamera::ControlInfoMap libcamera_control_info_map_t;
typedef struct libcamera_control_list libcamera_control_list_t;
typedef struct libcamera_control_info_map libcamera_control_info_map_t;