libcamera-sys/bindings/bindings.rs

extern "C" {
    pub fn libcamera_request_find_buffer(
        request: *const libcamera_request_t,
        stream: *const libcamera_stream_t,
    ) -> *mut libcamera_framebuffer_t;
}
extern "C" {
    pub fn libcamera_request_sequence(request: *const libcamera_request_t) -> u32;
}
extern "C" {
    pub fn libcamera_request_cookie(request: *const libcamera_request_t) -> u64;
}
extern "C" {
    pub fn libcamera_request_status(request: *const libcamera_request_t) -> libcamera_request_status_t;
}
extern "C" {
    pub fn libcamera_request_reuse(request: *mut libcamera_request_t, flags: libcamera_request_reuse_flag_t);
}
extern "C" {
    pub fn libcamera_request_has_pending_buffers(request: *const libcamera_request_t) -> bool;
}
extern "C" {
    pub fn libcamera_request_to_string(request: *const libcamera_request_t) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn libcamera_request_buffer_map_get(
        buffer_map: *mut libcamera_request_buffer_map_t,
        stream: *const libcamera_stream_t,
    ) -> *mut libcamera_framebuffer_t;
}
extern "C" {
    pub fn libcamera_request_buffer_map_iter(
        buffer_map: *mut libcamera_request_buffer_map_t,
    ) -> *mut libcamera_request_buffer_map_iter_t;
}
extern "C" {
    pub fn libcamera_request_buffer_map_iter_destroy(iter: *mut libcamera_request_buffer_map_iter_t);
}
extern "C" {
    pub fn libcamera_request_buffer_map_iter_end(iter: *const libcamera_request_buffer_map_iter_t) -> bool;
}
extern "C" {
    pub fn libcamera_request_buffer_map_iter_next(iter: *mut libcamera_request_buffer_map_iter_t);
}
extern "C" {
    pub fn libcamera_request_buffer_map_iter_stream(
        iter: *mut libcamera_request_buffer_map_iter_t,
    ) -> *const libcamera_stream_t;
}
extern "C" {
    pub fn libcamera_request_buffer_map_iter_buffer(
        iter: *mut libcamera_request_buffer_map_iter_t,
    ) -> *mut libcamera_framebuffer_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_callback_handle {
    _unused: [u8; 0],
}
pub type libcamera_callback_handle_t = libcamera_callback_handle;
pub mod libcamera_camera_configuration_status {
    pub type Type = ::std::os::raw::c_uint;
    pub const LIBCAMERA_CAMERA_CONFIGURATION_STATUS_VALID: Type = 0;
    pub const LIBCAMERA_CAMERA_CONFIGURATION_STATUS_ADJUSTED: Type = 1;
    pub const LIBCAMERA_CAMERA_CONFIGURATION_STATUS_INVALID: Type = 2;
}
pub type libcamera_request_completed_cb_t =
    ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void, arg2: *mut libcamera_request_t)>;
pub type libcamera_buffer_completed_cb_t = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut ::std::os::raw::c_void,
        arg2: *mut libcamera_request_t,
        arg3: *mut libcamera_framebuffer_t,
    ),
>;
pub type libcamera_disconnected_cb_t = ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>;
pub mod libcamera_orientation {
    pub type Type = ::std::os::raw::c_uint;
    pub const LIBCAMERA_ORIENTATION_ROTATE_0: Type = 1;
    pub const LIBCAMERA_ORIENTATION_ROTATE_0_MIRROR: Type = 2;
    pub const LIBCAMERA_ORIENTATION_ROTATE_180: Type = 3;
    pub const LIBCAMERA_ORIENTATION_ROTATE_180_MIRROR: Type = 4;
    pub const LIBCAMERA_ORIENTATION_ROTATE_90_MIRROR: Type = 5;
    pub const LIBCAMERA_ORIENTATION_ROTATE_270: Type = 6;
    pub const LIBCAMERA_ORIENTATION_ROTATE_270_MIRROR: Type = 7;
    pub const LIBCAMERA_ORIENTATION_ROTATE_90: Type = 8;
}
pub use self::libcamera_camera_configuration_status::Type as libcamera_camera_configuration_status_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_camera_configuration_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_sensor_configuration_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_camera_t {
    _unused: [u8; 0],
}
pub use self::libcamera_orientation::Type as libcamera_orientation_t;
extern "C" {
    pub fn libcamera_camera_configuration_destroy(config: *mut libcamera_camera_configuration_t);
}
extern "C" {
    pub fn libcamera_camera_configuration_size(config: *const libcamera_camera_configuration_t) -> usize;
}
extern "C" {
    pub fn libcamera_camera_configuration_at(
        config: *mut libcamera_camera_configuration_t,
        index: usize,
    ) -> *mut libcamera_stream_configuration_t;
}
extern "C" {
    pub fn libcamera_camera_configuration_validate(
        config: *mut libcamera_camera_configuration_t,
    ) -> libcamera_camera_configuration_status_t;
}
extern "C" {
    pub fn libcamera_camera_configuration_get_orientation(
        config: *const libcamera_camera_configuration_t,
    ) -> libcamera_orientation_t;
}
extern "C" {
    pub fn libcamera_camera_configuration_set_orientation(
        config: *mut libcamera_camera_configuration_t,
        orientation: libcamera_orientation_t,
    );
}
extern "C" {
    pub fn libcamera_camera_configuration_get_sensor_configuration(
        config: *const libcamera_camera_configuration_t,
    ) -> *mut libcamera_sensor_configuration_t;
}
extern "C" {
    pub fn libcamera_camera_configuration_add_configuration(
        config: *mut libcamera_camera_configuration_t,
    ) -> *mut libcamera_stream_configuration_t;
}
extern "C" {
    pub fn libcamera_camera_configuration_add_configuration_from(
        config: *mut libcamera_camera_configuration_t,
        src: *const libcamera_stream_configuration_t,
    ) -> *mut libcamera_stream_configuration_t;
}
extern "C" {
    pub fn libcamera_camera_configuration_to_string(
        config: *const libcamera_camera_configuration_t,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn libcamera_camera_copy(cam: *mut libcamera_camera_t) -> *mut libcamera_camera_t;
}
extern "C" {
    pub fn libcamera_camera_destroy(cam: *mut libcamera_camera_t);
}
extern "C" {
    pub fn libcamera_camera_id(cam: *const libcamera_camera_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn libcamera_camera_request_completed_connect(
        cam: *mut libcamera_camera_t,
        callback: libcamera_request_completed_cb_t,
        data: *mut ::std::os::raw::c_void,
    ) -> *mut libcamera_callback_handle_t;
}
extern "C" {
    pub fn libcamera_camera_request_completed_disconnect(
        cam: *mut libcamera_camera_t,
        handle: *mut libcamera_callback_handle_t,
    );
}
extern "C" {
    pub fn libcamera_camera_buffer_completed_connect(
        cam: *mut libcamera_camera_t,
        callback: libcamera_buffer_completed_cb_t,
        data: *mut ::std::os::raw::c_void,
    ) -> *mut libcamera_callback_handle_t;
}
extern "C" {
    pub fn libcamera_camera_buffer_completed_disconnect(
        cam: *mut libcamera_camera_t,
        handle: *mut libcamera_callback_handle_t,
    );
}
extern "C" {
    pub fn libcamera_camera_disconnected_connect(
        cam: *mut libcamera_camera_t,
        callback: libcamera_disconnected_cb_t,
        data: *mut ::std::os::raw::c_void,
    ) -> *mut libcamera_callback_handle_t;
}
extern "C" {
    pub fn libcamera_camera_disconnected_disconnect(
        cam: *mut libcamera_camera_t,
        handle: *mut libcamera_callback_handle_t,
    );
}
extern "C" {
    pub fn libcamera_camera_acquire(cam: *mut libcamera_camera_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn libcamera_camera_release(cam: *mut libcamera_camera_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn libcamera_camera_controls(cam: *const libcamera_camera_t) -> *const libcamera_control_info_map_t;
}
extern "C" {
    pub fn libcamera_camera_properties(cam: *const libcamera_camera_t) -> *const libcamera_control_list_t;
}
extern "C" {
    pub fn libcamera_camera_streams(cam: *const libcamera_camera_t) -> *const libcamera_stream_set_t;
}
extern "C" {
    pub fn libcamera_camera_generate_configuration(
        cam: *mut libcamera_camera_t,
        roles: *const libcamera_stream_role::Type,
        role_count: usize,
    ) -> *mut libcamera_camera_configuration_t;
}
extern "C" {
    pub fn libcamera_camera_configure(
        cam: *mut libcamera_camera_t,
        config: *mut libcamera_camera_configuration_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn libcamera_camera_create_request(cam: *mut libcamera_camera_t, cookie: u64) -> *mut libcamera_request_t;
}
extern "C" {
    pub fn libcamera_camera_queue_request(
        cam: *mut libcamera_camera_t,
        request: *mut libcamera_request_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn libcamera_camera_start(
        cam: *mut libcamera_camera_t,
        controls: *const libcamera_control_list_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn libcamera_camera_stop(cam: *mut libcamera_camera_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn libcamera_sensor_configuration_create() -> *mut libcamera_sensor_configuration_t;
}
extern "C" {
    pub fn libcamera_sensor_configuration_destroy(config: *mut libcamera_sensor_configuration_t);
}
extern "C" {
    pub fn libcamera_sensor_configuration_is_valid(config: *const libcamera_sensor_configuration_t) -> bool;
}
extern "C" {
    pub fn libcamera_sensor_configuration_get_bit_depth(
        config: *const libcamera_sensor_configuration_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn libcamera_sensor_configuration_get_output_size(
        config: *const libcamera_sensor_configuration_t,
    ) -> libcamera_size_t;
}
extern "C" {
    pub fn libcamera_sensor_configuration_get_analog_crop(
        config: *const libcamera_sensor_configuration_t,
    ) -> libcamera_rectangle_t;
}
extern "C" {
    pub fn libcamera_sensor_configuration_get_binning(
        config: *const libcamera_sensor_configuration_t,
        x: *mut ::std::os::raw::c_uint,
        y: *mut ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn libcamera_sensor_configuration_get_skipping(
        config: *const libcamera_sensor_configuration_t,
        x_odd_inc: *mut ::std::os::raw::c_uint,
        x_even_inc: *mut ::std::os::raw::c_uint,
        y_odd_inc: *mut ::std::os::raw::c_uint,
        y_even_inc: *mut ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn libcamera_sensor_configuration_set_bit_depth(
        config: *mut libcamera_sensor_configuration_t,
        bit_depth: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn libcamera_sensor_configuration_set_output_size(
        config: *mut libcamera_sensor_configuration_t,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn libcamera_sensor_configuration_set_analog_crop(
        config: *mut libcamera_sensor_configuration_t,
        crop: *const libcamera_rectangle_t,
    );
}
extern "C" {
    pub fn libcamera_sensor_configuration_set_binning(
        config: *mut libcamera_sensor_configuration_t,
        x: ::std::os::raw::c_uint,
        y: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn libcamera_sensor_configuration_set_skipping(
        config: *mut libcamera_sensor_configuration_t,
        x_odd_inc: ::std::os::raw::c_uint,
        x_even_inc: ::std::os::raw::c_uint,
        y_odd_inc: ::std::os::raw::c_uint,
        y_even_inc: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn libcamera_camera_set_sensor_configuration(
        config: *mut libcamera_camera_configuration_t,
        sensor_config: *const libcamera_sensor_configuration_t,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_camera_manager_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libcamera_camera_list_t {
    _unused: [u8; 0],
}
extern "C" {
    pub fn libcamera_camera_manager_create() -> *mut libcamera_camera_manager_t;
}
extern "C" {
    pub fn libcamera_camera_manager_destroy(mgr: *mut libcamera_camera_manager_t);
}
extern "C" {
    pub fn libcamera_camera_manager_start(mgr: *mut libcamera_camera_manager_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn libcamera_camera_manager_stop(mgr: *mut libcamera_camera_manager_t);
}
